--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -341,6 +341,7 @@ html, body {
     width: 30px;
     height: 20px;
     margin-left: 30px;
+    cursor: pointer;
     background-image: url(../../img/global.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -354,6 +355,10 @@ html, body {
     width: 0;
     height: 0;
     overflow: hidden;
+  }
+  .unb_btn .unb_language:hover {
+    outline: 2px solid #1c1c1c;
+    border-radius: 4px;
   }
   .unb_lauguage_area {
     display: none;
