--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -142,7 +142,10 @@
         position: relative;
         width: 30px; height: 20px;
         margin-left: 30px;
+        cursor: pointer;
         @include img('global.png');
+
+        &:hover { outline: 2px solid $color_black; border-radius: 4px;}
       }
       @at-root .unb_lauguage_area {
         display: none;
