--- a/study_code/a_project/scss/src/main/_main_event.scss
+++ b/study_code/a_project/scss/src/main/_main_event.scss
@@ -27,6 +27,11 @@
           width: 320px; height: 35px;
         }
       } // a
+
+      &:nth-child(1) .event_img { @include img('event_01.jpg', $size: cover); }
+      &:nth-child(2) .event_img { @include img('event_02.png', $size: cover); }
+      &:nth-child(3) .event_img { @include img('event_04.png', $size: cover); }
+      &:nth-child(4) .event_img { @include img('event_03.jpg', $size: cover); }
     } // .event
   } // .event_area
 } // #eventBox
