--- a/study_code/a_project/scss/src/main/_main_magazineBox.scss
+++ b/study_code/a_project/scss/src/main/_main_magazineBox.scss
@@ -7,7 +7,8 @@
 
   .magazine_img {
     width: 100%; height: 100%;
-    background-color: #eee;
+    // @include img('');
+    
     a {
       @include full;
     }
