--- a/study_code/a_project/scss/src/main/_main_viewBox.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox.scss
@@ -15,6 +15,10 @@
         top: 50%;
         width: 50px; height: 50px;
         margin-top: -25px;
+        &:hover { 
+          border-radius: 4px;
+          background-color: rgba($color_black, 0.4);
+        }
       }
       
       .view_after_btn { 
@@ -48,6 +52,7 @@
         }
         .view_content_01 { 
           background-color: #9e728c77;
+          // @include img('view_01.jpg', $size: cover);
         }
         .view_content_02 { 
           background-color: #FE5AE677;
@@ -68,6 +73,8 @@
       position: absolute;
       left: 20px; bottom: 10px;
       width: 70px; height: 25px;
+      background-color: rgba($color_black, 0.3);
+      border-radius: 4px;
       font-weight: 700;
       text-align: center; line-height: 25px;
       color: $color_white;
