--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -71,7 +71,7 @@
 }
 
 html, body {
-  color: #171717;
+  color: #1c1c1c;
   font-weight: 400;
 }
 
@@ -938,413 +938,207 @@ html, body {
     overflow: hidden;
   }
 }
+#eventBox {
+  width: 100%;
+  height: auto;
+  margin-top: 150px;
+}
+#eventBox .event_total_title {
+  height: 100px;
+  margin: auto;
+  margin-bottom: 50px;
+}
+#eventBox .event_total_title h2 {
+  width: 100%;
+  height: 100%;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100px;
+  text-transform: uppercase;
+}
+.event_area {
+  position: relative;
+  width: 93.75vw;
+  height: auto;
+  margin: auto;
+}
+.event_area .event_tab {
+  width: 84.375vw;
+  max-width: 1200px;
+  height: 40px;
+  margin: 0 auto;
+  padding: 0;
+  border-bottom: 1px solid #333;
+}
+.event_area .event_tab li {
+  float: left;
+  padding: 0 10px;
+  padding-bottom: 11px;
+}
+.event_area .event_tab li.on {
+  border-bottom: 3px solid #1c1c1c;
+}
+.event_area .event_tab li.on button {
+  font-weight: 700;
+}
+.tab_content {
+  width: 84.735vw;
+  height: auto;
+  min-height: 820px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 200px;
+}
+.tab_content .event_ing_wrap {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+.event {
+  position: relative;
+  width: 300px;
+  height: 380px;
+  margin-bottom: 60px;
+}
+.event .event_img {
+  width: 100%;
+  height: 300px;
+  background-color: #ebebeb;
+}
+.event .event_title {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+}
+.event .event_date {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+}
+.event .event_hover {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(28, 28, 28, 0.2);
+  text-align: center;
+  line-height: 380px;
+  color: #ffffff;
+  text-decoration: underline;
+  font-size: 22px;
+}
+.event:hover .event_hover {
+  display: block;
+}
+.event > a:focus .event_hover {
+  display: block;
+  border: 3px solid #1c1c1c;
+}
+
+.event_area .event_more {
+  position: absolute;
+  bottom: 110px;
+  left: 50%;
+  width: 300px;
+  height: 60px;
+  margin-left: -150px;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 60px;
+  color: #ffffff;
+  background-color: #333;
+}
+.event_area .event_more:hover {
+  border: 3px solid #1c1c1c;
+  background-color: #ffffff;
+  color: #1c1c1c;
+  font-weight: 700;
+}
+.event_area .event_more:focus {
+  border: 3px solid #1c1c1c;
+  background-color: #ffffff;
+  color: #1c1c1c;
+  font-weight: 700;
+}
+
 @media all and (max-width: 767px) {
-  #eventBox {
-    width: 100%;
-    height: auto;
-    margin-top: 150px;
-  }
   #eventBox .event_total_title {
     width: 200px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 50px;
   }
   #eventBox .event_total_title h2 {
-    width: 100%;
-    height: 100%;
-    font-size: 36px;
-    font-weight: 700;
     text-align: center;
-    line-height: 100px;
-    text-transform: uppercase;
   }
   .event_area {
     position: relative;
-    width: 93.75vw;
-    height: auto;
     min-height: 1300px;
-    margin: auto;
     padding: 30px 0;
   }
-  .event_area .event_tab {
-    width: 84.375vw;
-    max-width: 1200px;
-    height: 40px;
-    margin: 0 auto;
-    padding: 0;
-    border-bottom: 1px solid #333;
-  }
   .event_area .event_tab li {
-    float: left;
     margin: 3px auto 20px 0;
-    padding: 0 10px;
-    padding-bottom: 11px;
-  }
-  .event_area .event_tab li.on {
-    border-bottom: 3px solid #171717;
-  }
-  .event_area .event_tab li.on button {
-    font-weight: 700;
-  }
-  .tab_content {
-    width: 84.735vw;
-    height: auto;
-    min-height: 820px;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 200px;
   }
   .tab_content .event_ing_wrap {
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
-    height: auto;
   }
   .event {
-    position: relative;
-    width: 300px;
-    height: 380px;
     margin: auto;
-    margin-bottom: 60px;
-  }
-  .event .event_img {
-    width: 100%;
-    height: 300px;
-    background-color: #eee;
-  }
-  .event .event_title {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_date {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_hover {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    text-align: center;
-    line-height: 380px;
-    color: #fff;
-    text-decoration: underline;
-    font-size: 22px;
-  }
-  .event:hover .event_hover {
-    display: block;
-  }
-  .event > a:focus .event_hover {
-    display: block;
-    border: 2px solid #171717;
-  }
-
-  .event_area .event_more {
-    position: absolute;
-    bottom: 110px;
-    left: 50%;
-    width: 300px;
-    height: 60px;
-    margin-left: -150px;
-    border-radius: 10px;
-    font-size: 18px;
-    line-height: 60px;
-    color: #fff;
-    background-color: #333;
-  }
-  .event_area .event_more:hover {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
-  }
-  .event_area .event_more:focus {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1279px) {
-  #eventBox {
-    width: 100%;
-    height: auto;
-    margin-top: 150px;
-  }
   #eventBox .event_total_title {
     width: 200px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 50px;
   }
   #eventBox .event_total_title h2 {
-    width: 100%;
-    height: 100%;
-    font-size: 36px;
-    font-weight: 700;
     text-align: center;
-    line-height: 100px;
-    text-transform: uppercase;
   }
   .event_area {
     position: relative;
-    width: 93.75vw;
-    height: auto;
     min-height: 1300px;
-    margin: auto;
     padding: 30px 0;
   }
-  .event_area .event_tab {
-    width: 84.375vw;
-    max-width: 1200px;
-    height: 40px;
-    margin: 0 auto;
-    padding: 0;
-    border-bottom: 1px solid #333;
-  }
   .event_area .event_tab li {
-    float: left;
     margin: 3px 20px 20px 0;
-    padding: 0 10px;
-    padding-bottom: 11px;
-  }
-  .event_area .event_tab li.on {
-    border-bottom: 3px solid #171717;
-  }
-  .event_area .event_tab li.on button {
-    font-weight: 700;
-  }
-  .tab_content {
-    width: 84.735vw;
-    height: auto;
-    min-height: 820px;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 200px;
   }
   .tab_content .event_ing_wrap {
-    display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 100%;
-    height: auto;
   }
   .event {
-    position: relative;
-    width: 300px;
-    height: 380px;
     margin-left: 2vw;
     margin-right: 2vw;
-    margin-bottom: 60px;
-  }
-  .event .event_img {
-    width: 100%;
-    height: 300px;
-    background-color: #eee;
-  }
-  .event .event_title {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_date {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_hover {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    text-align: center;
-    line-height: 380px;
-    color: #fff;
-    text-decoration: underline;
-    font-size: 22px;
-  }
-  .event:hover .event_hover {
-    display: block;
-  }
-  .event > a:focus .event_hover {
-    display: block;
-    border: 2px solid #171717;
-  }
-
-  .event_area .event_more {
-    position: absolute;
-    bottom: 110px;
-    left: 50%;
-    width: 300px;
-    height: 60px;
-    margin-left: -150px;
-    border-radius: 10px;
-    font-size: 18px;
-    line-height: 60px;
-    color: #fff;
-    background-color: #333;
-  }
-  .event_area .event_more:hover {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
-  }
-  .event_area .event_more:focus {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
   }
 }
 @media all and (min-width: 1280px) {
-  #eventBox {
-    width: 100%;
-    height: auto;
-    margin-top: 150px;
-  }
   #eventBox .event_total_title {
     width: 84.375vw;
     max-width: 1200px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 50px;
   }
   #eventBox .event_total_title h2 {
-    font-size: 36px;
-    font-weight: 700;
     text-align: left;
-    line-height: 100px;
-    text-transform: uppercase;
   }
   .event_area {
     position: relative;
-    width: 93.75vw;
-    height: auto;
     min-height: 1100px;
-    margin: auto;
     padding: 30px 60px;
   }
-  .event_area .event_tab {
-    width: 84.375vw;
-    max-width: 1200px;
-    height: 40px;
-    margin: 0 auto;
-    padding: 0;
-    border-bottom: 1px solid #333;
-  }
   .event_area .event_tab li {
-    float: left;
     margin: 3px 20px 20px 0;
-    padding: 0 10px;
-    padding-bottom: 11px;
-  }
-  .event_area .event_tab li.on {
-    border-bottom: 3px solid #171717;
-  }
-  .event_area .event_tab li.on button {
-    font-weight: 700;
   }
   .tab_content {
-    width: 84.375vw;
     max-width: 1200px;
-    height: auto;
-    min-height: 820px;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 200px;
   }
   .tab_content .event_ing_wrap {
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 100%;
-    height: auto;
   }
   .event {
-    position: relative;
-    width: 300px;
-    height: 380px;
     margin-right: 90px;
-    margin-bottom: 60px;
   }
   .event:nth-child(3n) {
     margin-right: 0;
-  }
-  .event .event_img {
-    width: 100%;
-    height: 300px;
-    background-color: #eee;
-  }
-  .event .event_title {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_date {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-  }
-  .event .event_hover {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    text-align: center;
-    line-height: 380px;
-    color: #fff;
-    text-decoration: underline;
-    font-size: 22px;
-  }
-  .event:hover .event_hover {
-    display: block;
-  }
-  .event > a:focus .event_hover {
-    display: block;
-    border: 2px solid #171717;
-  }
-
-  .event_area .event_more {
-    position: absolute;
-    bottom: 110px;
-    left: 50%;
-    width: 300px;
-    height: 60px;
-    margin-left: -150px;
-    border-radius: 10px;
-    font-size: 18px;
-    line-height: 60px;
-    color: #fff;
-    background-color: #333;
-  }
-  .event_area .event_more:hover {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
-  }
-  .event_area .event_more:focus {
-    border: 3px solid #171717;
-    background-color: #fff;
-    color: #171717;
-    font-weight: 700;
   }
 }
 
