--- a/study_code/a_project/scss/common/_variable.scss
+++ b/study_code/a_project/scss/common/_variable.scss
@@ -6,6 +6,7 @@ $color_black: #1c1c1c;
 $color_red : #EC0F0C;
 $color_gray: #ebebeb;
 $color_dark_gray: #999;
+$color_deep_gray: #333;
 $color_primary: #e17900;
 $color_primary_light: #fff1e0; 
 $color_primary_circle: #ffd9ad;
@@ -17,7 +18,7 @@ $color_primary_circle: #ffd9ad;
 $color_light_gray_01: #c4c4c4;
 $color_light_gray_02: #aaaaaa;
 $color_light_gray_03: #757575;
-$color_deep_gray: #505050;
+// $color_deep_gray: #505050;
 $color_black_01: #333333;
 $color_black_02: #171717;
 // $color_white: #ffffff;
