--- a/study_code/a_project/scss/src/event_v2.scss
+++ b/study_code/a_project/scss/src/event_v2.scss
@@ -6,12 +6,119 @@
 @import '../common/variable';
 @import './main/main_common';
 
-html, body { color: #171717; font-weight: 400;}
+html, body { color: $color_black; font-weight: 400;}
 
 #wrap { width: 100%; height: auto;}
 
 @import '../common/headBox';
 @import '../common/footBox';
+
+#eventBox {
+  width: 100%; height: auto;
+  margin-top: 150px;
+
+  .event_total_title {
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+
+    h2 {
+      width: 100%; height: 100%;
+      font-size: 36px; font-weight: 700;
+      line-height: 100px;
+      text-transform: uppercase;
+    }
+  } // .event_total_title
+
+  @at-root .event_area {
+    position: relative;
+    width: 93.75vw; height: auto; 
+    margin: auto;
+
+    .event_tab {
+      width: 84.375vw; max-width: 1200px; height: 40px;
+      margin: 0 auto; padding: 0;
+      border-bottom: 1px solid #333;
+
+      li {
+        float: left;
+        padding: 0 10px; padding-bottom: 11px;
+
+        &.on {
+          border-bottom: 3px solid $color_black;
+          button {
+            font-weight: 700;
+          }
+        }
+      } // li
+    } // .event_tab
+
+    @at-root .tab_content {
+      width: 84.735vw; height: auto; min-height: 820px;
+      margin: auto; margin-top: 50px; margin-bottom: 200px;
+
+      .event_ing_wrap {
+        display: flex; 
+        width: 100%; height: auto;
+
+        @at-root .event {
+          position: relative;
+          width: 300px; height: 380px;
+          margin-bottom: 60px;
+
+          .event_img {
+            width: 100%; height: 300px;
+            background-color: $color_gray;
+          }
+          .event_title {
+            width: 100%; height: 40px;
+            line-height: 40px;
+          }
+          .event_date {
+            width: 100%; height: 40px;
+            line-height: 40px;
+          }
+          .event_hover {
+            display: none;
+            position: absolute; top: 0; left: 0; z-index: 10;
+            width: 100%; height: 100%;
+            background-color: rgba($color_black, 0.2);
+            text-align: center; line-height: 380px;
+            color: $color_white; text-decoration: underline;
+            font-size: 22px;
+          }
+          &:hover .event_hover {display: block;}
+          & > a:focus .event_hover { display: block; border: 3px solid $color_black;}
+
+        } // .event
+      } // .event_ing_wrap
+    } // .tab_content
+    .event_more {
+      position: absolute;
+      bottom: 110px; left: 50%;
+      width: 300px; height: 60px;
+      margin-left: -150px;
+      border-radius: 10px;
+      font-size: 18px; line-height: 60px;
+      color: $color_white;
+      background-color: $color_deep_gray;
+
+      &:hover { 
+        border: 3px solid $color_black; 
+        background-color: $color_white; color: $color_black; 
+        font-weight: 700;
+      }
+
+      &:focus {
+        border: 3px solid $color_black; 
+        background-color: $color_white; color: $color_black; 
+        font-weight: 700;
+      }
+    }
+  } // .event_area
+
+} // #eventBox
+
 
 
 @import './event/event_phone';
