--- a/study_code/b_step_03/css/src/e_02_slide_area.css
+++ b/study_code/b_step_03/css/src/e_02_slide_area.css
@@ -167,6 +167,7 @@ h1 {
 }
 
 #viewBox {
+  position: relative;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -174,6 +175,7 @@ h1 {
   height: auto;
   margin: 3rem auto;
   padding: 0.2rem;
+  padding-bottom: 4rem;
   border: 0.0625rem solid #333;
 }
 #viewBox h2 {
@@ -217,6 +219,29 @@ h1 {
 #viewBox .slide_btn > .next {
   order: 1;
 }
+#viewBox .indicator {
+  position: absolute;
+  bottom: 1rem;
+  right: 0;
+  z-index: 200;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 2rem;
+}
+#viewBox .indicator .count_part {
+  width: auto;
+  height: 100%;
+  padding: 0.2rem 1rem;
+  text-align: right;
+  text-decoration: none;
+  background-color: #fa9;
+  border-radius: 5rem;
+}
+#viewBox .indicator .total_count {
+  font-weight: 700;
+  color: #07a;
+}
 #viewBox .slide_content {
   width: 100%;
   height: 350px;
@@ -230,24 +255,47 @@ h1 {
   background-color: #afa;
 }
 #viewBox .slide_wrapper > li {
+  position: relative;
+  z-index: 0;
   width: 25%;
   height: 100%;
   padding: 3rem;
   color: #fff;
   font-size: 1rem;
   border: 1px solid #aaa;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#viewBox .slide_wrapper > li:before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 #viewBox .slide_wrapper > li.slide_con_01 {
+  background-image: url("../../multi/img/event/bg_01.png");
   background-color: #4BA686;
 }
 #viewBox .slide_wrapper > li.slide_con_02 {
+  background-image: url("../../multi/img/event/bg_02.png");
   background-color: #609263;
 }
 #viewBox .slide_wrapper > li.slide_con_03 {
+  background-image: url("../../multi/img/event/bg_03.png");
   background-color: #AA0CA7;
 }
 #viewBox .slide_wrapper > li.slide_con_04 {
+  background-image: url("../../multi/img/event/bg_04.png");
   background-color: #ABA1F4;
+}
+#viewBox .slide_wrapper > li.slide_con_05 {
+  background-image: url("../../multi/img/event/bg_05.png");
+  background-color: #333;
 }
 #viewBox h3 {
   font-size: 2rem;
