--- a/study_code/b_step_03/scss/particle/_slide.scss
+++ b/study_code/b_step_03/scss/particle/_slide.scss
@@ -1,9 +1,10 @@
 // slide.scss
 
 @at-root #viewBox {
+  position: relative;
   display: flex; justify-content:space-between; flex-wrap:wrap;
   width: 37.5rem; height:auto; 
-  margin: 3rem auto; padding:0.2rem;
+  margin: 3rem auto; padding:0.2rem; padding-bottom:4rem;
   border:0.0625rem solid #333; 
   h2 { 
     width: 40%; 
@@ -22,6 +23,18 @@
     > .next { order:1;}
   }
 
+  .indicator {
+    position: absolute; bottom: 1rem; right: 0; z-index:200;
+    display: flex; justify-content: flex-end;
+    width: 100%; height: 2rem; 
+
+    .count_part{
+      width:auto; height: 100%; padding:0.2rem 1rem; text-align: right; 
+      text-decoration: none;
+      background-color: #fa9; border-radius:5rem;}
+    .total_count{ font-weight: 700; color:#07a}
+  }
+
   .slide_content {
     width: 100%; height: 350px; 
     border:2px solid #f7a;
@@ -29,18 +42,33 @@
   .slide_wrapper {
     display: flex; flex-wrap:nowrap;
     width:400%; height:100%; background-color: #afa;
-    > li {
+    > li {position: relative;  z-index: 0;
       width:calc(100% / 4); height: 100%;
       padding: 3rem; color:#fff;
       font-size:1rem; border:1px solid #aaa; 
-
+      background-repeat: no-repeat; background-size: cover;
+      &:before{
+        content:""; display: block; position: absolute; z-index: -1; top: 0; left: 0;
+        width: 100%; height: 100%; background-color: rgba(0,0,0,0.5);
+      }
 
       // 임시로 배경색상넣기
-      &.slide_con_01{ background-color: #4BA686;}
-      &.slide_con_02{ background-color: #609263;}
-      &.slide_con_03{ background-color: #AA0CA7;}
-      &.slide_con_04{ background-color: #ABA1F4;}
-    }
+      &.slide_con_01{ 
+        background-image:url('../../multi/img/event/bg_01.png'); 
+        background-color: #4BA686;}
+      &.slide_con_02{ 
+        background-image:url('../../multi/img/event/bg_02.png'); 
+        background-color: #609263;}
+      &.slide_con_03{ 
+        background-image:url('../../multi/img/event/bg_03.png'); 
+        background-color: #AA0CA7;}
+      &.slide_con_04{ 
+        background-image:url('../../multi/img/event/bg_04.png'); 
+        background-color: #ABA1F4;}
+      &.slide_con_05{ 
+        background-image:url('../../multi/img/event/bg_05.png'); 
+        background-color: #333;}
+    }// li
   }
   h3{font-size: 2rem; font-weight: 600;}
   p{margin-bottom: 1.5rem; font-size: 1.2rem; text-decoration:underline;}
