[modify] main - max-width 설정

--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -95,6 +95,8 @@ a:hover {
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
+  max-width: 1920px;
+  margin: auto;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -288,6 +290,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     width: 39vw;
+    max-width: 750px;
     height: 40px;
     margin: auto;
     margin-top: 50px;
@@ -790,6 +793,7 @@ a:hover {
   #footBox {
     width: 100%;
     height: 600px;
+    margin: auto;
     padding: 70px 60px;
     background-color: #1c1c1c;
   }
@@ -797,6 +801,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    max-width: 1920px;
     height: 40px;
     margin: auto;
     margin-bottom: 30px;
@@ -838,6 +843,7 @@ a:hover {
   .foot_main_area {
     position: relative;
     width: 100%;
+    max-width: 1920px;
     height: 300px;
     margin: auto;
   }
@@ -945,7 +951,9 @@ a:hover {
 }
 #viewBox {
   width: 100%;
+  max-width: 1920px;
   height: auto;
+  margin: auto;
 }
 .view_area {
   position: relative;
@@ -1071,18 +1079,23 @@ a:hover {
   }
   .view_area {
     width: 58.6vw;
+    max-width: 1100px;
     height: 43vw;
+    max-height: 825px;
   }
   .side_view_area {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 31.25vw;
+    max-width: 600px;
     height: 43vw;
+    max-height: 825.6px;
   }
   .side_view_area .side_view {
     width: 100%;
     height: 14vw;
+    max-height: 268px;
     background-color: #ebebeb;
     margin: auto;
   }
@@ -1094,8 +1107,10 @@ a:hover {
 }
 #bestBox {
   width: 100%;
+  max-width: 1920px;
   height: auto;
-  padding: 10vw;
+  margin: auto;
+  padding: 80px;
 }
 .best_area {
   display: flex;
@@ -1500,10 +1515,12 @@ a:hover {
 }
 #challengeBox {
   width: 100%;
+  max-width: 1920px;
   height: auto;
   min-height: 400px;
+  margin: auto;
   margin-top: 20px;
-  padding: 10vw;
+  padding: 80px;
 }
 #challengeBox .challenge_area {
   display: flex;
@@ -1515,7 +1532,9 @@ a:hover {
 }
 .challenge {
   width: 38vw;
+  max-width: 730px;
   height: 38vw;
+  max-height: 730px;
   background-color: #ebebeb;
 }
 .challenge a {
@@ -1585,9 +1604,11 @@ a:hover {
 }
 #eventBox {
   width: 100%;
+  max-width: 1920px;
   height: auto;
+  margin: auto;
   margin-top: 20px;
-  padding: 10vw;
+  padding: 80px;
 }
 #eventBox .event_area {
   display: flex;
@@ -1771,10 +1792,16 @@ a:hover {
   color: #ffffff;
 }
 .awards_area {
-  position: relative;
   width: 100%;
   margin: auto;
   margin-top: 50px;
+}
+.awards_area .awards_part {
+  position: relative;
+  width: 100%;
+  max-width: 1920px;
+  height: 100%;
+  margin: auto;
 }
 .awards_main {
   display: flex;
@@ -1926,9 +1953,17 @@ a:hover {
   .awards_area {
     height: 300px;
   }
+  .awards_btn {
+    position: absolute;
+    top: calc(50% - 25px);
+    z-index: 1;
+    width: 100%;
+    max-width: 1920px;
+    height: 50px;
+    margin: auto;
+  }
   .awards_btn > div {
     position: absolute;
-    z-index: 1;
     bottom: 50%;
     width: 70px;
     height: 70px;
@@ -2019,6 +2054,7 @@ a:hover {
 
   .awards_main {
     width: 90.625vw;
+    max-width: 1740px;
     height: 220px;
     margin: auto;
   }
@@ -2069,9 +2105,11 @@ a:hover {
 }
 #saleBox {
   width: 100%;
+  max-width: 1920px;
   height: auto;
+  margin: auto;
   margin-top: 20px;
-  padding: 10vw;
+  padding: 80px;
   overflow: hidden;
 }
 .sale_area {
@@ -2079,6 +2117,7 @@ a:hover {
   justify-content: space-between;
   flex-wrap: nowrap;
   width: 78.125vw;
+  max-width: 1500px;
   height: 350px;
   margin: auto;
   margin-top: 50px;
