--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -90,6 +90,8 @@ html, body {
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
+  max-width: 1920px;
+  margin: auto;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -283,6 +285,7 @@ html, body {
     display: flex;
     justify-content: space-between;
     width: 39vw;
+    max-width: 750px;
     height: 40px;
     margin: auto;
     margin-top: 50px;
@@ -785,6 +788,7 @@ html, body {
   #footBox {
     width: 100%;
     height: 600px;
+    margin: auto;
     padding: 70px 60px;
     background-color: #1c1c1c;
   }
@@ -792,6 +796,7 @@ html, body {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    max-width: 1920px;
     height: 40px;
     margin: auto;
     margin-bottom: 30px;
@@ -833,6 +838,7 @@ html, body {
   .foot_main_area {
     position: relative;
     width: 100%;
+    max-width: 1920px;
     height: 300px;
     margin: auto;
   }
