--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -199,12 +199,13 @@
 @media all and (min-width: 1280px){
   #footBox {
     width: 100%; height: 600px;
+    margin: auto;
     padding: 70px 60px;
     background-color: $color_black;
   
     @at-root .foot_top_area {
       display: flex; justify-content: space-between;
-      width: 100%; height: 40px;
+      width: 100%; max-width: 1920px; height: 40px;
       margin: auto;
       margin-bottom: 30px;
 
@@ -225,7 +226,7 @@
 
     @at-root .foot_main_area {
       position: relative;
-      width: 100%; height: 300px;
+      width: 100%; max-width: 1920px; height: 300px;
       margin: auto;
 
       .foot_main_btn {
