--- a/study_code/a_project/scss/src/main/_main_viewBox_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox_pc.scss
@@ -9,16 +9,16 @@
     
     @at-root .view_area {
       // width: 750px; height: 550px;
-      width: 58.6vw; height: 43vw;
+      width: 58.6vw; max-width: 1100px; height: 43vw; max-height: 825px;
       // background-color: #eee;
 
       @at-root .side_view_area {
         display: flex; flex-direction: column; justify-content: space-between;
         // width: 400px; height: 550px;
-        width: 31.25vw; height: 43vw;
+        width: 31.25vw; max-width: 600px; height: 43vw; max-height: 825.6px;
         .side_view {
           // width: 100%; height: 180px;
-          width: 100%; height: 14vw;
+          width: 100%; height: 14vw; max-height: 268px;
           background-color: $color_gray;
           margin: auto; 
           
