--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -277,12 +277,12 @@
           @at-root .foot_facebook a {
             display: block;
             width: 30px; height: 30px;
-            @include img('facebook.png');
+            @include img('facebook_white.png');
           }
           @at-root .foot_instagram a{
             display: block;
             width: 30px; height: 30px;
-            @include img('instagram.png');
+            @include img('instagram_white.png');
           }
         }
       }
