--- a/study_code/a_project/scss/src/main/_main_challengeBox.scss
+++ b/study_code/a_project/scss/src/main/_main_challengeBox.scss
@@ -18,6 +18,9 @@
       // margin: auto;
       background-color: $color_gray;
 
+      &:nth-child(1) {@include img('challenge_01.jpg', $size: cover)}
+      &:nth-child(2) {@include img('challenge_02.jpg', $size: cover)}
+
       a { @include full; }
     }
   } // .challenge_area
