--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -11,7 +11,7 @@ html, body { color: $color_black; font-weight: 400;}
 
 #wrap { width: 100%; height: auto;}
 
-a:hover { outline: 2px solid $color_black; border-radius: 4px; }
+// a:hover { border: 2px solid $color_black; border-radius: 4px; }
 
 // @media all and (max-width: 1279px){
 //   .title_all { display: none;}
