--- a/study_code/a_project/scss/src/main/_main_magazineBox.scss
+++ b/study_code/a_project/scss/src/main/_main_magazineBox.scss
@@ -1,13 +1,13 @@
 // _main_magazineBox.scss
 
 #magazineBox {
-  width: 100%; height: 23.5vw;
+  width: 100%; height: 21.875vw;
   background-color: $color_primary_light;
   // padding-top: 30px;
 
   .magazine_img {
     width: 100%; height: 100%;
-    // @include img('');
+    @include img('magazine.jpeg', $size: cover);
     
     a {
       @include full;
